--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@
    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
    crossorigin=""/>
     <title>Greeters Loire Valley</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@900&display=swap');
+      </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
