--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,8 @@
    crossorigin=""/>
     <title>Greeters Loire Valley</title>
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@900&display=swap');
-      </style>
+      @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200;400;900&display=swap');
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
